[build-system]
requires = ["setuptools", 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "exoverses"
version = "0.1"
authors = [{name="Corey Spohn",email = "corey.a.spohn@nasa.gov"}]
description = "A unified interface for the various tools that create universes for exoplanet simulations"
# readme = {file= "README.md"}
dependencies = ["matplotlib", "numpy", "pandas", "astropy", "keplertools", "EXOSIMS", "scipy"]
license = {file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[dynamic]
readme = {file= "README.md"}
