[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "exoverses"
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
description = "A unified interface for the various tools that create universes for exoplanet simulations"
dependencies = [
  "numpy",
  "pandas",
  "astropy",
  "keplertools",
  "scipy",
  "rebound>=4",
  "xarray>=v2023.12",
  "tqdm>=4.56.0",
  "dill",
]
optional-dependencies = { exosims = ["EXOSIMS"] }
license = { file = "LICENSE" }
dynamic = ['readme', 'version']
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/CoreySpohn/exoverses"
Issues = "https://github.com/CoreySpohn/exoverses/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
