[metadata]
name = exoverses
version = 0.1
description = A unified interface for the various tools that create universes for exoplanet simulations
long_description = file: README.md
long_description_content_type = text/markdown
author = Corey Spohn
author_email = corey.a.spohn@nasa.gov
url = https://github.com/CoreySpohn/exoverses
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
license_files = LICENSE
